--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,10 +32,9 @@ jobs:
       run: |
         echo "Creating structure..."
         
-        # ساخت پوشه‌ها
+        # ساخت پوشه اصلی
         mkdir -p android/app/src/main/java/com/invoiceapp
         mkdir -p android/app/src/main/res/values
-        mkdir -p android/gradle/wrapper
         
         # فایل build.gradle (سطح پروژه)
         cat > android/build.gradle << 'EOF'
@@ -83,7 +82,7 @@ jobs:
         ]
         
         android {
-            namespace "com.invoiceapp"
+            namespace " "com.invoiceapp"
             compileSdkVersion rootProject.ext.compileSdkVersion
             
             defaultConfig {
@@ -164,6 +163,7 @@ jobs:
         cd android
         
         # ساختار فایل‌های گریدل
+        mkdir -p gradle/wrapper
         cat > gradle/wrapper/gradle-wrapper.properties << 'EOF'
         distributionBase=GRADLE_USER_HOME
         distributionUrl=https\://services.gradle.org/distributions/gradle-7.5.1-bin.zip
@@ -181,7 +181,6 @@ jobs:
         esac
         
         # Attempt to set APP_HOME
-        # Resolve dependencies:
         # . (dot) command calls resolveAppHome
         . "lib/resolveAppLocation.sh"
         
