--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,7 @@ jobs:
         # ساخت پوشه اصلی
         mkdir -p android/app/src/main/java/com/invoiceapp
         mkdir -p android/app/src/main/res/values
+        mkdir -p android/gradle/wrapper
         
         # فایل build.gradle (سطح پروژه)
         cat > android/build.gradle << 'EOF'
@@ -82,7 +83,7 @@ jobs:
         ]
         
         android {
-            namespace " "com.invoiceapp"
+            namespace "com.invoiceapp"
             compileSdkVersion rootProject.ext.compileSdkVersion
             
             defaultConfig {
@@ -94,7 +95,7 @@ jobs:
             }
             
             signingConfigs {
-                release {
+                debug {
                     storeFile file('debug.keystore')
                     storePassword 'android'
                     keyAlias 'androiddebugkey'
@@ -103,8 +104,12 @@ jobs:
             }
             
             buildTypes {
+                debug {
+                    signingConfig signingConfigs.debug
+                }
                 release {
-                    signingConfig signingConfigs.release
+                    signingConfig signingConfigs.debug
+                    minifyEnabled false
                 }
             }
         }
@@ -124,12 +129,13 @@ jobs:
             
             <application
               android:name=".MainApplication"
-              android:label="Invoice App"
+              android:label="@string/app_name"
+              android:icon="@mipmap/ic_launcher"
               android:allowBackup="false"
               android:theme="@style/AppTheme">
               <activity
                 android:name=".MainActivity"
-                android:label="Invoice App"
+                android:label="@string/app_name"
                 android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|screenSize|smallestScreenSize|uiMode"
                 android:launchMode="singleTask"
                 android:windowSoftInputMode="adjustResize"
@@ -162,7 +168,6 @@ jobs:
         echo "Generating Gradle Wrapper..."
         cd android
         
-        # ساختار فایل‌های گریدل
         mkdir -p gradle/wrapper
         cat > gradle/wrapper/gradle-wrapper.properties << 'EOF'
         distributionBase=GRADLE_USER_HOME
@@ -171,29 +176,19 @@ jobs:
         zipStorePath=wrapper/dists
         EOF
         
-        # ساخت فایل شل اسکریپ Gradle (gradlew)
+        # ساخت اسکریپ gradlew
         cat > gradlew << 'EOF'
         #!/bin/sh
         # Fail fast if we're on Windows/Cygwin
         case "`uname`" in
-            CYGWIN*|MINGW*|MSYS*|WIN*|Darwin*) true
-                exit 1 ;;
+            CYGWIN*|MINGW*|MSYS*|WIN*|Darwin*) true ;;
+            * ) exit 1 ;;
         esac
         
-        # Attempt to set APP_HOME
-        # . (dot) command calls resolveAppHome
-        . "lib/resolveAppLocation.sh"
-        
-        # (dot) command calls loadEnv
-        . "lib/gradle-app-loader.sh"
-        
-        # Execute Gradle
         exec "$JAVACMD" "$JAVA_HOME/bin/java" -classpath "$APP_HOME/lib/gradle-launcher-7.5.1.jar" org.gradle.wrapper.GradleWrapperMain "$@"
         EOF
         
         chmod +x gradlew
-        # نسخه گریدل را به پوشه کپی می‌کنیم
-        cp gradlew android/
 
     - name: Build APK
       run: |
