--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,36 +23,25 @@ jobs:
       with:
         node-version: '18'
 
-    - name: Install Dependencies
+    - name: Create Android Project
       run: |
-        echo "Installing dependencies..."
-        npm install
-
-    - name: Create Android Project Structure
-      run: |
-        echo "Creating structure..."
+        echo "Creating minimal Android project..."
         
         # ساخت پوشه اصلی
         mkdir -p android/app/src/main/java/com/invoiceapp
-        mkdir -p android/app/src/main/res/values
+        mkdir -p android/app/src/main/res
+        mkdir -p android/app/src/main/assets
         mkdir -p android/gradle/wrapper
         
-        # فایل build.gradle (سطح پروژه)
+        # فایل build.gradle ساده (سطح پروژه)
         cat > android/build.gradle << 'EOF'
         buildscript {
-            ext {
-                buildToolsVersion = "33.0.0"
-                minSdkVersion = 21
-                compileSdkVersion = 33
-                targetSdkVersion = 33
-            }
             repositories {
                 google()
                 mavenCentral()
             }
             dependencies {
                 classpath("com.android.tools.build:gradle:7.3.1")
-                classpath("com.facebook.react:react-native-gradle-plugin")
             }
         }
         
@@ -60,96 +49,69 @@ jobs:
             repositories {
                 google()
                 mavenCentral()
-                maven { url "https://www.jitpack.io" }
             }
         }
         EOF
         
-        # فایل settings.gradle
+        # فایل settings.gradle ساده
         cat > android/settings.gradle << 'EOF'
-        rootProject.name = 'InvoiceApp'
-        apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle")
-        applyNativeModulesSettingsGradle(settings)
-        include ':app'
+        rootProject.name = 'invoice-app'
         EOF
         
-        # فایل app/build.gradle
+        # فایل app/build.gradle ساده
         cat > android/app/build.gradle << 'EOF'
         apply plugin: "com.android.application"
-        apply plugin: "com.facebook.react"
-        
-        project.ext.react = [
-            enableHermes: true
-        ]
         
         android {
-            namespace "com.invoiceapp"
-            compileSdkVersion rootProject.ext.compileSdkVersion
+            compileSdkVersion 33
+            buildToolsVersion "33.0.0"
             
             defaultConfig {
-                applicationId "com.invoiceapp"
-                minSdkVersion rootProject.ext.minSdkVersion
-                targetSdkVersion rootProject.ext.targetSdkVersion
+                applicationId "com.invoiceapp.shop"
+                minSdkVersion 21
+                targetSdkVersion 33
                 versionCode 1
                 versionName "1.0"
             }
             
-            signingConfigs {
-                debug {
-                    storeFile file('debug.keystore')
-                    storePassword 'android'
-                    keyAlias 'androiddebugkey'
-                    keyPassword 'android'
-                }
-            }
-            
             buildTypes {
-                debug {
-                    signingConfig signingConfigs.debug
-                }
                 release {
-                    signingConfig signingConfigs.debug
                     minifyEnabled false
+                    proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
                 }
             }
         }
         
         dependencies {
-            implementation("com.facebook.react:react-android")
+            implementation "com.facebook.react:react-native:0.72.6"
         }
-        
-        apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle")
-        applyNativeModulesAppBuildGradle(project)
         EOF
         
-        # فایل AndroidManifest.xml
+        # فایل AndroidManifest.xml ساده
         cat > android/app/src/main/AndroidManifest.xml << 'EOF'
         <manifest xmlns:android="http://schemas.android.com/apk/res/android">
             <uses-permission android:name="android.permission.INTERNET" />
             
             <application
-              android:name=".MainApplication"
-              android:label="@string/app_name"
-              android:icon="@mipmap/ic_launcher"
-              android:allowBackup="false"
-              android:theme="@style/AppTheme">
-              <activity
-                android:name=".MainActivity"
-                android:label="@string/app_name"
-                android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|screenSize|smallestScreenSize|uiMode"
-                android:launchMode="singleTask"
-                android:windowSoftInputMode="adjustResize"
-                android:exported="true">
-                <intent-filter>
-                    <action android:name="android.intent.action.MAIN" />
-                    <category android:name="android.intent.category.LAUNCHER" />
-                </intent-filter>
-              </activity>
+                android:label="Invoice App"
+                android:icon="@mipmap/ic_launcher"
+                android:theme="@android:style/AppTheme.NoActionBar">
+                <activity
+                    android:name=".MainActivity"
+                    android:label="Invoice App"
+                    android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|screenSize|smallestScreenSize|uiMode"
+                    android:windowSoftInputMode="adjustResize"
+                    android:exported="true">
+                    <intent-filter>
+                        <action android:name="android.intent.action.MAIN" />
+                        <category android:name="android.intent.category.LAUNCHER" />
+                    </intent-filter>
+                </activity>
             </application>
         </manifest>
         EOF
         
-        # MainActivity.java
+        # MainActivity.java ساده
         cat > android/app/src/main/java/com/invoiceapp/MainActivity.java << 'EOF'
         package com.invoiceapp;
         
@@ -158,44 +120,45 @@ jobs:
         public class MainActivity extends ReactActivity {
             @Override
             protected String getMainComponentName() {
-                return "InvoiceApp";
+                return "main";
             }
         }
+        EOF
+        
+        # فایل strings.xml
+        cat > android/app/src/main/res/values/strings.xml << 'EOF'
+        <?xml version="1.0" encoding="utf-8"?>
+        <resources>
+            <string name="app_name">Invoice App</string>
+        </resources>
         EOF
 
     - name: Generate Gradle Wrapper
       run: |
-        echo "Generating Gradle Wrapper..."
         cd android
+        curl -Lo gradlew https://raw.githubusercontent.com/gradle/gradle/v8.5.1/scripts/gradlew
+        curl -Lo gradle-wrapper.properties https://raw.githubusercontent.com/gradle/gradle/v8.5.1/gradle/wrapper/gradle-wrapper.properties
+        curl -Lo gradle-wrapper.jar https://raw.githubusercontent.com/gradle/gradle/v8.5.1/gradle/wrapper/gradle-wrapper.jar
         
+        # دانلود wrapper در پوشه gradle/wrapper (ایمن شود ساختار استاندارد شود)
         mkdir -p gradle/wrapper
-        cat > gradle/wrapper/gradle-wrapper.properties << 'EOF'
-        distributionBase=GRADLE_USER_HOME
-        distributionUrl=https\://services.gradle.org/distributions/gradle-7.5.1-bin.zip
-        zipStoreBase=GRADLE_USER_HOME
-        zipStorePath=wrapper/dists
-        EOF
-        
-        # ساخت اسکریپ gradlew
-        cat > gradlew << 'EOF'
-        #!/bin/sh
-        # Fail fast if we're on Windows/Cygwin
-        case "`uname`" in
-            CYGWIN*|MINGW*|MSYS*|WIN*|Darwin*) true ;;
-            * ) exit 1 ;;
-        esac
-        
-        exec "$JAVACMD" "$JAVA_HOME/bin/java" -classpath "$APP_HOME/lib/gradle-launcher-7.5.1.jar" org.gradle.wrapper.GradleWrapperMain "$@"
-        EOF
+        cp gradlew gradle/wrapper/
+        cp gradle-wrapper.properties gradle/wrapper/
+        cp gradle-wrapper.jar gradle/wrapper/
         
         chmod +x gradlew
+
+    - name: Install Dependencies
+      run: |
+        echo "Installing dependencies..."
+        npm install
 
     - name: Build APK
       run: |
         echo "Starting build..."
         cd android
-        ./gradlew assembleRelease --no-daemon
-    
+        ./gradlew assembleRelease --no-daemon --stacktrace
+
     - name: Upload APK
       uses: actions/upload-artifact@v4
       with:
